# BE_test

./: .gitignore  docker-compose.yml  pyproject.toml
docker/: client.py
docker/fast/: .app.py.swp  app.py  backup2_app.py  backup_app.py
docker/spark/: .sample.py.swp  dddd.ipynb  sample.py  start-spark.sh  web_spark.py
docker/worker/: Dockerfile  start-worker.sh
