[project]
name = "BE_test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kimwonjoon", email = "kimpass189@gmail.com"},
]
dependencies = [
    "pyspark>=3.5.3",
    "PyMySQL>=1.1.1",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy>=2.0.36",
    "websockets>=14.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
